Add a layers list under group, and a current selected layer in IJupyterGISModel

--- a/python/jupytergis_lab/style/base.css
+++ b/python/jupytergis_lab/style/base.css
@@ -1,4 +1,5 @@
 @import url('~@deathbeds/jupyterlab-rjsf/style/index.css');
+@import url('~@jupytergis/base/style/index.css');
 
 .jGIS-Spinner {
   position: absolute;
