Add a visibility icon and fix the visibility layer with mapLibre

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -3,53 +3,4 @@
 | Distributed under the terms of the Modified BSD License.
 |---------------------------------------------------------------------------- */
 
-.jp-gis-layerPanel {
-  list-style-type: none;
-}
-
-.jp-gis-layerEntry {
-  padding: 2px 12px;
-}
-
-.jp-gis-layerGroup {
-  display: flex;
-  flex-direction: column;
-}
-
-.jp-gis-layerGroupHeader {
-  display: flex;
-  margin-left: -2px;
-  padding-bottom: 4px;
-}
-
-.jp-gis-layerGroupHeader:hover {
-  cursor: pointer;
-}
-
-.jp-gis-layerGroupCollapser {
-  transform: rotate(-90deg);
-  margin: auto 0;
-  height: 16px;
-}
-
-.jp-gis-layerGroupCollapser.jp-mod-expanded {
-  transform: rotate(0deg);
-}
-
-.jp-gis-layerItem {
-  display: flex;
-  flex-direction: row;
-}
-
-.jp-gis-layerItem.jp-mod-selected {
-  color: var(--jp-ui-inverse-font-color1);
-  background: var(--jp-brand-color1);
-}
-
-.jp-gis-layerItem:hover {
-  cursor: pointer;
-}
-
-.jp-gis-layerItem .jp-gis-layerIcon {
-  padding-right: 4px;
-}
+@import url('./leftPanel.css');
