Move layer browser css

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -4,3 +4,4 @@
 |---------------------------------------------------------------------------- */
 
 @import url('./leftPanel.css');
+@import url('./layerBrowser.css');
