classify the toolbar buttons

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -6,3 +6,8 @@
 @import url('./dialog.css');
 @import url('./layerBrowser.css');
 @import url('./leftPanel.css');
+
+.jGIS-Toolbar-GroupName {
+  font-size: var(--jp-ui-font-size0);
+  padding-left: 3px;
+}
