Rework custom raster layer creation (#32)
* Rework raster layer creation

* Add TODO comment

* Fix build

* Add icon for custom layer

* Fix missing parameters when creating source

* Bring back removed id

* Fix test

* Use PromiseDelegate

* Fix readonly property editing while creating layer

* Rework dialog buttons

--- a/packages/base/style/layerBrowser.css
+++ b/packages/base/style/layerBrowser.css
@@ -1,20 +1,44 @@
-.jgis-layer-browser-container * {
+.jGIS-layerbrowser-FormDialog .jp-Dialog-footer button {
+  display: none;
+}
+
+.jGIS-layerbrowser-FormDialog .jp-Dialog-header {
+  padding: 0;
+}
+
+.jGIS-layerbrowser-FormDialog .jp-Dialog-content {
+  width: calc(100% - 4rem);
+  max-width: 100%;
+  height: calc(100% - 2rem);
+  max-height: 100%;
+}
+
+.jGIS-layerbrowser-FormDialog form {
+  padding: 10px;
+}
+
+.jGIS-customlayer-form {
+  height: 100%;
+  overflow: hidden;
+}
+
+.jGIS-layer-browser-container * {
   box-sizing: border-box;
 }
 
-.jgis-layer-browser-container {
+.jGIS-layer-browser-container {
   display: flex;
   flex-direction: column;
 }
 
-.jgis-layer-browser-header-container {
+.jGIS-layer-browser-header-container {
   position: sticky;
   top: 0;
   z-index: 40;
   background-color: var(--jp-layout-color1);
 }
 
-.jgis-layer-browser-header {
+.jGIS-layer-browser-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,26 +46,26 @@
   padding: 1rem 2rem;
 }
 
-.jgis-layer-browser-header-text {
+.jGIS-layer-browser-header-text {
   padding-right: 1rem;
   font-weight: bold;
 }
 
-.jgis-layer-browser-header-search-container {
+.jGIS-layer-browser-header-search-container {
   display: flex;
   align-items: center;
   flex-grow: 1;
   position: relative;
 }
 
-.jgis-layer-browser-header-search-icon {
+.jGIS-layer-browser-header-search-icon {
   position: absolute;
   top: 50%;
   left: 0.75rem;
   transform: translateY(-50%);
 }
 
-.jgis-layer-browser-header-search {
+.jGIS-layer-browser-header-search {
   box-shadow: none;
   flex: 1 1 0%;
   height: 40px;
@@ -53,7 +77,7 @@
   color: var(--jp-ui-font-color1);
 }
 
-.jgis-layer-browser-grid {
+.jGIS-layer-browser-grid {
   display: grid;
   gap: 1.25rem;
   grid-template-rows: 1fr;
@@ -62,26 +86,19 @@
 }
 
 @media (min-width: 1400px) {
-  .jgis-layer-browser-grid {
+  .jGIS-layer-browser-grid {
     grid-template-columns: repeat(5, minmax(0px, 1fr));
   }
 }
 
-.jgis-dialog-override {
-  width: calc(100% - 4rem);
-  max-width: 100%;
-  height: calc(100% - 2rem);
-  max-height: 100%;
-}
-
-.jgis-layer-browser-categories {
+.jGIS-layer-browser-categories {
   display: flex;
   gap: 2rem;
   padding: 0 2rem;
   border-bottom: 2px solid var(--jp-border-color1);
 }
 
-.jgis-layer-browser-category {
+.jGIS-layer-browser-category {
   position: relative;
   opacity: 0.7;
   padding: 4px 0 14px;
@@ -89,7 +106,7 @@
   text-decoration: none;
 }
 
-.jgis-layer-browser-category::after {
+.jGIS-layer-browser-category::after {
   content: '';
   position: absolute;
   bottom: -2px;
@@ -103,17 +120,17 @@
   background-color: transparent;
 }
 
-.jgis-layer-browser-category.jgis-layer-browser-category-selected::after {
+.jGIS-layer-browser-category.jGIS-layer-browser-category-selected::after {
   width: 100%;
   background-color: var(--jp-inverse-layout-color2);
 }
 
-.jgis-layer-browser-category.jgis-layer-browser-category-selected {
+.jGIS-layer-browser-category.jGIS-layer-browser-category-selected {
   opacity: 1;
   font-weight: bold;
 }
 
-.jgis-layer-browser-tile {
+.jGIS-layer-browser-tile {
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
@@ -123,16 +140,22 @@
   transition: transform 150ms ease-out;
   cursor: pointer;
   border: 1px solid var(--jp-border-color1);
+  background-color: var(--jp-layout-color1);
   border-radius: 8px;
 }
 
-.jgis-layer-browser-tile:hover {
+.jGIS-layer-browser-custom-tile {
+  border: 1px solid var(--jp-border-color2);
+  background-color: var(--jp-layout-color2);
+}
+
+.jGIS-layer-browser-tile:hover {
   box-shadow: var(--jp-layout-color2);
   transform: translateY(-4px);
   background-color: var(--jp-brand-color2);
 }
 
-.jgis-layer-browser-tile-img-container {
+.jGIS-layer-browser-tile-img-container {
   /* isolation: isolate; */
   /* border: medium; */
   /* background: transparent; */
@@ -147,7 +170,7 @@
   border-radius: 8px;
 }
 
-.jgis-layer-browser-img {
+.jGIS-layer-browser-img {
   /* position: absolute; */
   /* height: 100%; */
   /* object-fit: cover; */
@@ -155,7 +178,7 @@
   width: 100%;
 }
 
-.jgis-layer-browser-icon {
+.jGIS-layer-browser-icon {
   padding-inline: 8px;
   display: inline-flex;
   justify-content: center;
@@ -173,12 +196,12 @@
   border-radius: 20px;
 }
 
-.jgis-layer-browser-tile:not(.jgis-layer-browser-tile:hover)
-  .jgis-layer-browser-icon {
+.jGIS-layer-browser-tile:not(.jGIS-layer-browser-tile:hover)
+  .jGIS-layer-browser-icon {
   opacity: 0;
 }
 
-.jgis-layer-browser-added {
+.jGIS-layer-browser-added {
   display: inline-flex;
   gap: 0.35rem;
   opacity: 1 !important;
@@ -186,7 +209,7 @@
   color: var(--jp-ui-inverse-font-color1);
 }
 
-.jgis-layer-browser-text-container {
+.jGIS-layer-browser-text-container {
   padding-inline: 4px;
   display: flex;
   flex-direction: column;
@@ -196,14 +219,14 @@
   box-sizing: border-box;
 }
 
-.jgis-layer-browser-text-info {
+.jGIS-layer-browser-text-info {
   display: flex;
   flex-direction: column;
   gap: 8px;
   box-sizing: border-box;
 }
 
-.jgis-layer-browser-text-header {
+.jGIS-layer-browser-text-header {
   overflow: hidden;
   font-weight: bold;
   text-transform: capitalize;
@@ -211,12 +234,12 @@
   white-space: nowrap;
 }
 
-.jgis-layer-browser-text-p {
+.jGIS-layer-browser-text-p {
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.jgis-layer-browser-text-source {
+.jGIS-layer-browser-text-source {
   overflow: hidden;
   font-size: 0.75rem;
   font-weight: lighter;
@@ -224,7 +247,7 @@
   white-space: nowrap;
 }
 
-.jgis-layer-browser-text-description {
+.jGIS-layer-browser-text-description {
   -webkit-line-clamp: 2;
   -moz-box-orient: vertical;
   display: -webkit-box;
@@ -232,6 +255,6 @@
   text-overflow: ellipsis;
 }
 
-.jgis-layer-browser-text-general {
+.jGIS-layer-browser-text-general {
   margin: 0;
 }
