Add geoJSON source and layer (#30)
* Command to validate and add geoJSON source

* Change the add data form to allow adding data in the shared document

* Align ajv versions

* Add vector layer

* Fix the layer level in case of async addLayer

* Fix the change of layer type

* Improve the add GeoJSONSource and addVectorLayer dialogs

* lint

* classify the toolbar buttons

* Update examples with vector source, add color picker and add geojson source properties

* Typo and lint

Co-authored-by: martinRenou <21197331+martinrenou@users.noreply.github.com>

* typo

Co-authored-by: martinRenou <21197331+martinrenou@users.noreply.github.com>

* Remove unused ICollaborativeDrive

* Add form validation on GeoJSON file

* Add a lighter geoJSON file as examples

* lint

* Update snapshots

* Modifications after rebase

* lint

* Use only one form to create a GeoJSON source and its layer

* Prevent form submission if file is missing

* Add a basic test on vector layer creation

---------

Co-authored-by: martinRenou <21197331+martinrenou@users.noreply.github.com>

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -3,5 +3,11 @@
 | Distributed under the terms of the Modified BSD License.
 |---------------------------------------------------------------------------- */
 
-@import url('./leftPanel.css');
+@import url('./dialog.css');
 @import url('./layerBrowser.css');
+@import url('./leftPanel.css');
+
+.jGIS-Toolbar-GroupName {
+  font-size: var(--jp-ui-font-size0);
+  padding-left: 3px;
+}
