--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -6,6 +6,7 @@
 @import url('./dialog.css');
 @import url('./layerBrowser.css');
 @import url('./leftPanel.css');
+@import url('maplibre-gl/dist/maplibre-gl.css');
 
 .jGIS-Toolbar-GroupName {
   font-size: var(--jp-ui-font-size0);
