--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -77,8 +77,13 @@
   flex-grow: 1;
   margin-right: 4px;
   outline: none;
+  padding: 2px 7px;
 }
 
 .jp-gis-left-panel-input:focus {
   border: 1px solid var(--jp-brand-color1);
+}
+
+.jp-gis-layerText {
+  padding: 3px 0;
 }
