--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -3,6 +3,11 @@
 | Distributed under the terms of the Modified BSD License.
 |---------------------------------------------------------------------------- */
 
+.jp-gis-layerPanel {
+  display: flex;
+  flex-direction: column;
+}
+
 .jp-gis-sourcePanel,
 .jp-gis-layerPanel {
   min-height: 3em;
