--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -3,7 +3,13 @@
 | Distributed under the terms of the Modified BSD License.
 |---------------------------------------------------------------------------- */
 
-.jp-gis-layerItem {
+.jp-gis-sourcePanel,
+.jp-gis-layerPanel {
+  min-height: 3em;
+}
+
+.jp-gis-layerItem,
+.jp-gis-source {
   padding: 2px 0 2px 12px;
 }
 
@@ -32,22 +38,26 @@
   transform: rotate(0deg);
 }
 
-.jp-gis-layer {
+.jp-gis-layer,
+.jp-gis-source {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.jp-gis-layer.jp-mod-selected {
+.jp-gis-layer.jp-mod-selected,
+.jp-gis-source.jp-mod-selected {
   background: var(--jp-editor-selected-background);
 }
 
-.jp-gis-layer:has(.jp-gis-layerTitle:hover) {
+.jp-gis-layer:has(.jp-gis-layerTitle:hover),
+.jp-gis-source:has(.jp-gis-sourceTitle:hover) {
   cursor: pointer;
   background: var(--jp-brand-color2);
 }
 
-.jp-gis-layer button {
+.jp-gis-layer button,
+.jp-gis-source button {
   margin-left: auto;
   min-height: unset;
   min-width: unset;
@@ -55,21 +65,31 @@
   margin-right: 4px;
 }
 
-.jp-gis-layerIcon {
+.jp-gis-layerIcon,
+.jp-gis-sourceIcon {
   display: flex;
   align-items: center;
 }
 
-.jp-gis-layerTitle {
+.jp-gis-layerIcon > svg,
+.jp-gis-sourceIcon > svg {
+  height: 16px;
+  width: 16px;
+}
+
+.jp-gis-layerTitle,
+.jp-gis-sourceTitle {
   display: flex;
   flex-grow: 1;
+  align-items: center;
 }
 
 .jp-gis-layer:focus-within {
   outline: none;
 }
 
-.jp-gis-layerTitle .jp-gis-layerIcon {
+.jp-gis-layerTitle .jp-gis-layerIcon,
+.jp-gis-sourceTitle .jp-gis-sourceIcon {
   padding-right: 4px;
 }
 
@@ -94,4 +114,11 @@
 
 li .lm-Menu-itemLabel {
   text-transform: capitalize;
+}
+
+.jp-gis-sourceInfo {
+  font-size: var(--jp-ui-font-size0);
+  font-style: italic;
+  padding-left: 5px;
+  color: var(--jp-ui-font-color2);
 }
