Highlight selected groups

--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -51,7 +51,8 @@
 }
 
 .jp-gis-layer.jp-mod-selected,
-.jp-gis-source.jp-mod-selected {
+.jp-gis-source.jp-mod-selected,
+.jp-gis-layerGroupHeader.jp-mod-selected {
   background: var(--jp-editor-selected-background);
 }
 
