--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -27,7 +27,8 @@
 }
 
 .jGIS-property-panel .jp-SchemaForm .array-item {
-  flex-grow: 1;
+  flex: 1 0 0%;
+  align-items: center;
 }
 
 .jGIS-property-panel .jp-SchemaForm .field-description {
@@ -37,4 +38,12 @@
 .jGIS-property-panel .jp-SchemaForm fieldset fieldset {
   padding-left: unset;
   border-left: none;
+}
+
+.jGIS-property-panel .jp-SchemaForm .array-item-list:has(.field-array) {
+  flex-direction: column;
+}
+
+.jGIS-property-panel .jp-SchemaForm .array-item-toolbox {
+  padding-left: 13px;
 }
