Remove rjsf buttons from coordinates form

--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -17,10 +17,10 @@
 /* Overwrite forms CSS */
 .jGIS-property-panel .array-item-list {
   display: flex;
+  gap: 1rem;
 }
 
 .jGIS-property-panel .jp-SchemaForm .array-item:not(:last-child) {
-  margin-right: var(--jp-ui-font-size1);
   border-bottom: none;
   margin-bottom: unset;
   padding-bottom: unset;
@@ -42,8 +42,4 @@
 
 .jGIS-property-panel .jp-SchemaForm .array-item-list:has(.field-array) {
   flex-direction: column;
-}
-
-.jGIS-property-panel .jp-SchemaForm .array-item-toolbox {
-  padding-left: 13px;
 }
