--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -17,17 +17,18 @@
 /* Overwrite forms CSS */
 .jGIS-property-panel .array-item-list {
   display: flex;
+  gap: 1rem;
 }
 
 .jGIS-property-panel .jp-SchemaForm .array-item:not(:last-child) {
-  margin-right: var(--jp-ui-font-size1);
   border-bottom: none;
   margin-bottom: unset;
   padding-bottom: unset;
 }
 
 .jGIS-property-panel .jp-SchemaForm .array-item {
-  flex-grow: 1;
+  flex: 1 0 0%;
+  align-items: center;
 }
 
 .jGIS-property-panel .jp-SchemaForm .field-description {
@@ -37,4 +38,8 @@
 .jGIS-property-panel .jp-SchemaForm fieldset fieldset {
   padding-left: unset;
   border-left: none;
+}
+
+.jGIS-property-panel .jp-SchemaForm .array-item-list:has(.field-array) {
+  flex-direction: column;
 }
