--- a/packages/base/style/filterPanel.css
+++ b/packages/base/style/filterPanel.css
@@ -12,7 +12,7 @@
 
 .jp-gis-filter-button-container {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .jp-gis-filter-main > .jp-Dialog-button {
@@ -40,4 +40,20 @@
 .jp-gis-filter-row > option {
   text-transform: capitalize;
   font-size: var(--jp-ui-font-size1);
+}
+
+.jp-gis-filter-icon {
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+}
+
+.jp-gis-filter-icon:hover {
+  scale: 1.3;
+  cursor: pointer;
+}
+
+.jp-gis-filter-icon > svg {
+  height: 16px;
+  width: 16px;
 }
