--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -10,6 +10,7 @@
 @import url('./filterPanel.css');
 @import url('./colorExpression.css');
 @import url('maplibre-gl/dist/maplibre-gl.css');
+@import url('ol/ol.css');
 
 .jGIS-Toolbar-GroupName {
   font-size: var(--jp-ui-font-size0);
