--- a/packages/base/style/base.css
+++ b/packages/base/style/base.css
@@ -8,7 +8,8 @@
 @import url('./leftPanel.css');
 @import url('./terrainDialog.css');
 @import url('./filterPanel.css');
-@import url('maplibre-gl/dist/maplibre-gl.css');
+@import url('./colorExpression.css');
+@import url('ol/ol.css');
 
 .jGIS-Toolbar-GroupName {
   font-size: var(--jp-ui-font-size0);
