More homogeneous CSS with the file browser (#128)
* More homogeneous CSS with the file browser

* Update CSS for the visibility button

* Improve cursor

--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -43,18 +43,26 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  color: var(--jp-ui-font-color1);
 }
 
 .jp-gis-layer.jp-mod-selected,
 .jp-gis-source.jp-mod-selected,
 .jp-gis-layerGroupHeader.jp-mod-selected {
-  background: var(--jp-editor-selected-background);
+  color: var(--jp-ui-inverse-font-color1);
+  background: var(--jp-brand-color1);
 }
 
-.jp-gis-layer:has(.jp-gis-layerTitle:hover),
-.jp-gis-source:has(.jp-gis-sourceTitle:hover) {
+.jp-gis-layer:hover:not(.jp-mod-selected),
+.jp-gis-source:hover:not(.jp-mod-selected) {
   cursor: pointer;
-  background: var(--jp-brand-color2);
+  background: var(--jp-layout-color2);
+}
+
+.jp-gis-layer.jp-mod-selected .jp-icon-selectable,
+.jp-gis-source.jp-mod-selected .jp-icon-selectable,
+.jp-gis-layerGroupHeader.jp-mod-selected .jp-icon-selectable {
+  fill: var(--jp-ui-inverse-font-color1);
 }
 
 .jp-gis-layer button,
@@ -64,6 +72,11 @@
   min-width: unset;
   padding: unset;
   margin-right: 4px;
+}
+
+.jp-gis-layer.jp-mod-selected button:hover .jp-icon-selectable,
+.jp-gis-source.jp-mod-selected button:hover .jp-icon-selectable {
+  fill: var(--jp-ui-font-color1);
 }
 
 .jp-gis-layerIcon,
@@ -113,6 +126,7 @@
 .jp-gis-layerText,
 .jp-gis-sourceText {
   padding: 3px 0;
+  cursor: pointer;
 }
 
 li .lm-Menu-itemLabel {
