--- a/packages/base/style/symbologyDialog.css
+++ b/packages/base/style/symbologyDialog.css
@@ -152,13 +152,13 @@
   flex-direction: column;
   gap: 0.25rem;
   position: absolute;
-  /* box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1); */
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   visibility: hidden;
   z-index: 40;
   flex: 1 1 auto;
   width: 100%;
-  /* font-size: var(--jp-ui-font-size2); */
+  max-height: 375px;
   background: var(--jp-input-background);
   padding: 0 25px 0 8px;
   border: var(--jp-border-width) solid var(--jp-input-border-color);
@@ -173,25 +173,6 @@
   visibility: visible;
 }
 
-.dropdown-header {
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #ccc;
-}
-
-.dropdown ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.dropdown li {
-  padding: 10px;
-  cursor: pointer;
-}
-
 .dropdown > jp-gis-color-ramp-entry:hover {
   background-color: #f1f1f1;
 }
@@ -199,15 +180,8 @@
 .jp-gis-color-ramp-entry {
   display: flex;
   align-items: center;
-  /* flex: 1 1 auto; */
-  /* width: 100%; */
   font-size: var(--jp-ui-font-size2);
-  /* background: var(--jp-input-background); */
   color: var(--jp-ui-font-color0);
-  /* padding: 0 25px 0 8px; */
-  /* border: var(--jp-border-width) solid var(--jp-input-border-color); */
-  /* border-radius: 0; */
-  /* outline: none; */
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
