--- a/packages/base/style/symbologyDialog.css
+++ b/packages/base/style/symbologyDialog.css
@@ -1,3 +1,8 @@
+select,
+select option {
+  text-transform: capitalize;
+}
+
 .jp-gis-symbology-dialog .jp-Dialog-header {
   font-weight: bold;
 }
@@ -50,7 +55,7 @@
 .jp-gis-band-container {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 13px;
 }
 
 .jp-gis-layer-symbology-container {
@@ -69,10 +74,6 @@
   display: flex;
   flex-direction: column;
   gap: 13px;
-}
-
-.jp-gis-band-container .jp-gis-symbology-row:last-child {
-  margin-bottom: 12px;
 }
 
 .jp-gis-stop-container {
@@ -147,7 +148,7 @@
   }
 }
 
-.dropdown {
+.jp-gis-color-ramp-dropdown {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
@@ -169,13 +170,13 @@
   -moz-appearance: none;
 }
 
-.open {
+.jp-gis-open {
   visibility: visible;
 }
 
-.dropdown > jp-gis-color-ramp-entry:hover {
+/* .jp-gis-color-ramp-dropdown > .jp-gis-color-ramp-entry:hover {
   background-color: #f1f1f1;
-}
+} */
 
 .jp-gis-color-ramp-entry {
   display: flex;
@@ -183,6 +184,8 @@
   font-size: var(--jp-ui-font-size2);
   color: var(--jp-ui-font-color0);
   appearance: none;
+  text-transform: capitalize;
+  cursor: pointer;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -193,6 +196,26 @@
 
 .jp-gis-color-canvas {
   margin: 0 -7px;
-  border-radius: 8px;
-  width: 99%;
+  border-radius: 4px;
+  width: 354px;
+}
+
+.jp-gis-color-canvas-display {
+  width: 100%;
+  height: 30px;
+  visibility: initial;
+  border: var(--jp-border-width) solid var(--jp-input-border-color);
+}
+
+.jp-gis-canvas-button-wrapper {
+  flex: 1 0 50%;
+  max-width: 50%;
+  position: relative;
+}
+
+#jp-gis-canvas-button.jp-gis-canvas-button {
+  visibility: hidden;
+  margin: 0;
+  padding: 0 1px 0 0;
+  width: 100%;
 }
