--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -110,8 +110,8 @@
 
 .jp-gis-layerIcon.jp-mod-hidden,
 .jp-gis-sourceIcon.jp-mod-hidden {
-  font-weight: bold;
-  color: red;
+  stroke: red;
+  stroke-width: 1px;
 }
 
 .jp-gis-left-panel-input {
