--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -108,10 +108,9 @@
   padding-right: 4px;
 }
 
-.jp-gis-layerIcon.jp-mod-hidden,
-.jp-gis-sourceIcon.jp-mod-hidden {
-  stroke: var(--jp-warn-color0);
-  stroke-width: 1px;
+.jp-gis-layerIcon.jp-mod-hidden path,
+.jp-gis-sourceIcon.jp-mod-hidden path{
+  fill: var(--jp-warn-color0);
 }
 
 .jp-gis-left-panel-input {
