--- a/packages/base/style/leftPanel.css
+++ b/packages/base/style/leftPanel.css
@@ -108,8 +108,8 @@
   padding-right: 4px;
 }
 
-.jp-gis-layerIcon.jp-mod-hidden path,
-.jp-gis-sourceIcon.jp-mod-hidden path {
+.jp-gis-layerIcon.jp-gis-mod-hidden path,
+.jp-gis-sourceIcon.jp-gis-mod-hidden path {
   fill: var(--jp-warn-color0);
 }
 
